[metadata]
name = field_intersept
version = 0.0.1
author = Kirill Golubev
license = MIT
classifiers =
    ProgrammingLanguage :: Python :: 3

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests

[options.extras_require]
test = 
    pytest-md
    pytest-emoji
    pytest-cov
    pytest
linting =
    flake8
    flake8-bugbear==22.10.27
    flake8-builtins
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    pep8-naming
examples =
    field_update

# [options.package_data]
# field_intersept =
#     *.pyi
